# ctext

./: .gitignore  CMakeLists.txt
include/ctext/: DataTable.hpp
include/ctext/datatable/: DataTableBase.hpp  DataTableStorage.hpp  IDataTable.hpp  SelectComponents.hpp
tests/: CMakeLists.txt  datatable.cpp
